# recursive-variant

./: CMakeLists.txt  LICENSE  README.md
cmake/: EnableWarnings.cmake  FindCereal.cmake
include/: Value.h
include/Value/: Helper.h  Print.h  Serialization.h  TypeIndex.h  Value.h
test/: CMakeLists.txt
test/src/: main.cpp
